# fastapi-star-burger

./: .coveragerc  .gitignore  Makefile  alembic.ini  pyproject.toml  readme.md  setup.cfg
backend/: exceptions.py  server.py
backend/admin/: admin.py
backend/alembic/: env.py
backend/alembic/versions/: 169aee50c7ac_create_account_table.py  749177b71249_add_restaurant_menu_items.py  8e1a8092c5b4_remove_verbose_name_from_all_models.py  a4d974fdea33_create_tables.py  a699779454fd_add_image_field.py  b8804be70219_added_account_table.py  d59ef26a67bd_remove_verbose_name.py  dcfbb937dbb9_app_product_model.py
backend/config/: settings.py
backend/db/: db_deps.py  db_init.py
backend/foodcart/api/: routers.py
backend/foodcart/api/endpoints/: banners.py  images.py  products.py  restaurants.py
backend/foodcart/crud/: banner.py  base.py  crud_banners.py  crud_products.py  crud_restaurants.py  product.py  restaurant.py
backend/foodcart/models/: banners.py  products.py  restaurants.py
backend/foodcart/schemas/: banners.py  products.py  restaurants.py
backend/foodcart/services/: images.py
backend/foodcart/tests/: conftest.py  test_cruds.py  test_endpoints.py  test_utils.py
backend/foodcart/utils/: save_file.py
backend/star_burger/: routers.py
backend/star_burger/endpoints/: images.py
backend/star_burger/utils/: images.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: BannerComponent.js  Product.js  Products.js
