[tool.poetry]
name = "fast-star-burger"
version = "0.1.0"
description = ""
authors = ["Dmitry andimeon <andimeon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.41"}
alembic = "^1.8.1"
pytest = "^7.1.3"
SQLAlchemy-ImageAttach = "^1.1.0"
psycopg2 = "^2.9.4"
python-multipart = "^0.0.5"
aiofiles = "^22.1.0"
asyncpg = "^0.26.0"
black = "^22.10.0"
mypy = "^0.982"
pylint = "^2.15.4"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
