[tool.poetry]
name = "fast-star-burger"
version = "0.1.0"
description = ""
authors = ["Dmitry andimeon <andimeon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.41"}
alembic = "^1.8.1"
SQLAlchemy-ImageAttach = "^1.1.0"
psycopg2 = "^2.9.4"
python-multipart = "^0.0.5"
aiofiles = "^22.1.0"
asyncpg = "^0.26.0"
flake8 = "^5.0.4"
aioredis = "^2.0.1"
sqladmin = "^0.6.1"
ipython = "^8.6.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
flake8 = "^5.0.4"
flake8-2020 = "^1.7.0"
flake8-blind-except = "^0.2.1"
flake8-builtins = "^2.0.1"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.10.1"
flake8-debugger = "^4.1.2"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.4.0"
flake8-polyfill = "^1.0.2"
flake8-print = "^5.0.0"
flake8-quotes = "^3.3.1"
flake8-string-format = "^0.3.0"
flake8-annotations-complexity = "^0.0.7"
flake8-variables-names = "^0.0.5"
flake8-class-attributes-order = "^0.1.3"
flake8-broken-line = "^0.6.0"
flake8-tidy-imports = "^4.8.0"
flake8-typing-imports = "^1.14.0"
dlint = "^0.13.0"
flake8-if-statements = "^1.0.0"
flake8-functions = "^0.0.7"
flake8-annotations-coverage = "^0.0.6"
flake8-expression-complexity = "^0.0.11"
flake8-printf-formatting = "^1.1.2"
flake8-multiline-containers = "^0.0.19"
flake8-absolute-import = "^1.0.0"
flake8-simplify = "^0.19.3"
flake8-functions-names = "^0.3.0"
scspell3k = "^2.2"
pytest = "^7.2.0"
black = "^22.10.0"
mypy = "^0.982"
pylint = "^2.15.4"
types-aiofiles = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
